# auto-web

./: .env.example  README.md  pyproject.toml  requirements.txt  run.py
app/: config.py  main.py
app/correios/: login.py  logistic_code.py  receiver_form.py  sender_form.py
app/messages/: utils.py
app/open_cart/: login.py  order.py
